# btcmap-api

./: .gitignore  .replit  AGENTS.md  Cargo.toml  README.md  devtools  devtools_completion.bash  opencode.jsonc  replit.nix  rust-toolchain.toml  schema.sql  vacuum.sh
.github/workflows/: preview.yml
docs/: README.md
docs/rest/: README.md
docs/rest-api/: README.md  area-elements.md  element-issues.md  elements.md  feeds.md  reports.md  users.md
docs/rest-api/v2/: README.md  areas.md  elements.md  users.md
docs/rest-api/v3/: area-elements.md  areas.md  elements.md  events.md  feeds.md  users.md
docs/rest-api/v4/: README.md  area-feed.md  areas.md  element-issues.md  elements.md  events.md  feeds.md  users.md
docs/rest/v2/: events.md  reports.md
docs/rest/v3/: README.md  element-comments.md  elements.md  reports.md
docs/rest/v4/: README.md  activity.md  areas.md  auth.md  events.md  invoices.md  nostr.md  place-boosts.md  place-comments.md  place-issues.md  places.md  search.md  sync.md  users.md
docs/rpc/: README.md  admin-actions.md  area-methods.md  auth.md  element-methods.md  get_wallets.md  invoice-methods.md  nostr.md  public-methods.md  search-methods.md  user-methods.md
docs/rpc-api/: README.md  admin-actions.md  admin-methods.md  admin-roles.md  area-methods.md  auth.md  element-methods.md  invoice-methods.md  public-methods.md  search-methods.md  user-methods.md
docs/rpc/analytics/: README.md  dashboard.md  get_daily_infra_report.md  get_report.md  get_request_log.md  get_top_clients.md  search.md
docs/rpc/auth/: add-user.md  change-password.md  create-api-key.md  get_api_keys.md  revoke_api_key.md  signin.md  signout.md  signup.md  whoami.md
docs/rpc/event/: create_event.md  delete_event.md  get_event.md  get_events.md  update_event.md
docs/rpc/import/: README.md  get_place_import_origins.md  get_submitted_place.md  import_merchant.md  report_imported_merchant.md  revoke_submitted_place.md  submit_place.md
docs/rpc/invoice/: create_invoice.md  get_invoice.md
docs/rpc/log/: README.md  get_daily_infra_report.md
migrations/: 1.sql  10.sql  12.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  23.sql  24.sql  25.sql  26.sql  28.sql  29.sql  3.sql  30.sql  32.sql  34.sql  35.sql  38.sql  39.sql  4.sql  40.sql  41.sql  42.sql  44.sql  48.sql  49.sql  5.sql  51.sql  52.sql  53.sql  54.sql  55.sql  56.sql  57.sql  (+27 more)
src/: api_error.rs  area.rs  auth.rs  ban.rs  boost.rs  conf.rs  daily_report.rs  db.rs  db_utils.rs  element.rs  error.rs  firewall.rs  generate_android_icons.rs  generate_element_categories.rs  generate_report.rs  log.rs  main.rs  og.rs  pouch.rs  sync.rs  sync_users.rs  test.rs
src/admin/: db.rs  mod.rs  model.rs  service.rs
src/area/: admin.rs  controller_v2.rs  data.rs  mod.rs  model.rs  rpc.rs  service.rs  v2.rs  v3.rs  v4.rs
src/area_element/: mod.rs  model.rs  service.rs  v3.rs
src/auth/: mod.rs  model.rs  service.rs
src/boost/: mod.rs
src/command/: add_area.rs  analyze_logs.rs  compress_reports.rs  db.rs  deduplicate_updated_at.rs  fetch_areas.rs  fetch_pouch_tags.rs  fix_tags.rs  generate_android_icons.rs  generate_element_categories.rs  generate_report.rs  generate_reports.rs  import_countries.rs  lint.rs  mod.rs  remove_areas_tag.rs  server.rs  sync.rs  sync_users.rs  trending_areas.rs  update_areas_tag.rs
src/controller/: area.rs  area_v2.rs  daily_report.rs  element.rs  element_event.rs  element_v2.rs  element_v3.rs  event_v2.rs  mod.rs  report_v2.rs  user.rs  user_v2.rs
src/db/: migration.rs  mod.rs
src/db/access_token/: blocking_queries.rs  mod.rs  queries.rs  queries_async.rs  schema.rs
src/db/admin/: queries.rs  schema.rs  (+1 more)
src/discord/: discord.rs  mod.rs
src/element/: admin.rs  controller_v2.rs  controller_v3.rs  find_areas.rs  mod.rs  model.rs  rpc.rs  service.rs  v2.rs  v3.rs  v4.rs
src/element_comment/: mod.rs  model.rs  v3.rs  v4.rs
src/element_issue/: mod.rs  model.rs  v4.rs
src/event/: controller_v2.rs  mod.rs  model.rs  service.rs  v2.rs  v3.rs
src/feed/: atom.rs
src/invoice/: model.rs  service.rs
src/lint/: mod.rs
src/log/: blocking_queries.rs  db.rs  middleware.rs  mod.rs  request.rs  summary.rs
src/model/: admin_action.rs  api_error.rs  area.rs  daily_report.rs  element.rs  element_event.rs  event.rs  json.rs  mod.rs  osm_user_json.rs  overpass_element.rs  overpass_element_json.rs  report.rs  token.rs  user.rs
src/og/: element.rs
src/osm/: api.rs  mod.rs  osm.rs  overpass.rs
src/repo/: area.rs  mod.rs
src/report/: controller_v2.rs  mod.rs  model.rs  v2.rs  v3.rs
src/rest/: auth.rs  error.rs  mod.rs  nostr_auth.rs
src/review/: mod.rs  model.rs
src/rpc/: add_admin.rs  add_admin_action.rs  add_allowed_action.rs  add_area.rs  add_element_comment.rs  add_paid_element_comment.rs  boost_element.rs  generate_area_icons.rs  generate_areas_elements_mapping.rs  generate_element_categories.rs  generate_element_icons.rs  generate_element_issues.rs  generate_invoice.rs  generate_reports.rs  get_area.rs  get_area_dashboard.rs  get_boosted_elements.rs  get_boosts.rs  get_element.rs  get_element_issues.rs  get_elements_snapshot.rs  get_invoice.rs  get_most_active_users.rs  get_most_commented_countries.rs  get_trending_communities.rs  get_trending_countries.rs  get_user_activity.rs  get_wallets.rs  handler.rs  humanize_opening_hours.rs  humanize_working_hours.rs  mod.rs  model.rs  paywall_add_element_comment.rs  paywall_boost_element.rs  paywall_get_add_element_comment_quote.rs  paywall_get_boost_element_quote.rs  remove_admin_action.rs  remove_allowed_action.rs  remove_area.rs  (+11 more)
src/server/: mod.rs
src/service/: admin.rs  area.rs  area_element.rs  auth.rs  ban.rs  comment.rs  discord.rs  element.rs  event.rs  filesystem.rs  gitea.rs  invoice.rs  lnd.rs  log.rs  matrix.rs  mod.rs  nip98.rs  og.rs  osm.rs  overpass.rs  ppq.rs  report.rs  search.rs  sync.rs  user.rs  wallet.rs  wallet_cache.rs
src/sync/: users.rs
src/tile/: controller.rs
src/user/: admin.rs  controller_v2.rs  mod.rs  model.rs  service.rs  v2.rs  v3.rs
src/vacuum/: mod.rs
(+284 files in other folders)
