[package]
name = "btcmap-api"
version = "0.1.0"
edition = "2021"

# In case we need to maximize runtime performance
# [profile.release]
# codegen-units = 1
# lto = "fat"
# opt-level = 3
# panic = "abort"

[dependencies]

# This is the main dependency, providing a webserver and core infra
# https://github.com/actix/actix-web/blob/master/actix-web/CHANGES.md
actix-web = { version = "4.13.0", default-features = false, features = ["macros", "compress-brotli"] }

# HTTP types and services for the Actix ecosystem
# https://github.com/actix/actix-web/blob/main/actix-http/CHANGES.md
actix-http = { version = "3.12.0", default-features = false }

# Actix middleware needs that
# https://github.com/rust-lang/futures-rs/releases
futures-util = { version = "0.3.32", default-features = false }

# We're using SQLite because it's portable and it requires no maintenance
# SQLite is fast enough for our needs and we aren't aiming for infinite scalability
# https://github.com/rusqlite/rusqlite/releases
rusqlite = { version = "0.38.0", default-features = false, features = ["bundled", "time", "serde_json", "trace"] }

# We're wrapping blocking SQLite connections into an async pool
# https://github.com/deadpool-rs/deadpool/blob/main/crates/deadpool-sqlite/CHANGELOG.md
deadpool-sqlite = { version = "0.13.0", default-features = false, features = ["rt_tokio_1"] }

# TODO bump once rustls migration is working upstream
# That's an industry standard for making HTTP requests
# https://github.com/seanmonstar/reqwest/releases
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }

# Used for mapping Rust structs to JSON via derive annotation
# https://github.com/serde-rs/serde/releases
serde = { version = "1.0.228", default-features = false, features = ["derive"] }

# JSON is heavily used in this project
# https://github.com/serde-rs/json/releases
serde_json = { version = "1.0.149", default-features = false, features = ["preserve_order"] }

# That's an industry starnard for working with time
# TODO consider switching to std alternatives, if/when present
# https://github.com/time-rs/time/blob/main/CHANGELOG.md
time = { version = "0.3.47", default-features = false, features = ["macros", "serde-well-known"] }

# Async logging infra
# https://github.com/tokio-rs/tracing/releases
tracing = { version = "0.1.44", default-features = false }

# Async logging infra
# https://github.com/tokio-rs/tracing/releases
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["json", "env-filter", "fmt"] }

# Used to embed database migrations
# https://github.com/Michael-F-Bryan/include_dir/tags
include_dir = { version = "0.7.4", default-features = false }

# TODO test migration to 1.0.0
# Used for dealing with area bounds
# https://github.com/georust/geojson/blob/main/CHANGES.md
geojson = { version = "0.24.2", default-features = false, features = ["geo-types"] }

# Used for dealing with area bounds
# https://github.com/georust/geo/blob/main/geo/CHANGES.md
geo = { version = "0.33.0", default-features = false }

# Used to handle area icons
# https://github.com/marshallpierce/rust-base64/blob/master/RELEASE-NOTES.md
base64 = { version = "0.22.1", default-features = false }

# Used to generate OpenGraph images
# https://docs.rs/staticmap/latest/staticmap/
staticmap = { version = "0.4.2", default-features = false }

# Used to decode png and encode jpeg images
# https://github.com/image-rs/image/blob/main/CHANGES.md
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }

# Used to extract tip addresses from OSM profiles
# https://github.com/rust-lang/regex/blob/master/CHANGELOG.md
regex = { version = "1.12.3", default-features = false }

# BTC Map Matrix Space bot
# https://github.com/matrix-org/matrix-rust-sdk/releases
matrix-sdk = { version = "0.16.0", default-features = false, features = ["rustls-tls"] }

# https://github.com/servo/rust-url/releases
url = { version = "2.5.7", default-features = false }

# https://github.com/RustCrypto/password-hashes/blob/master/argon2/CHANGELOG.md
argon2 = { version = "0.5.3", default-features = false, features = ["password-hash", "alloc"] }

# https://github.com/uuid-rs/uuid/releases
uuid = { version = "1.23.1", default-features = false, features = ["v4"] }

# https://github.com/Peternator7/strum/blob/master/CHANGELOG.md
strum = { version = "0.28.0", features = ["derive"] }

# https://github.com/tokio-rs/tokio/releases
tokio = "1.52.1"

# https://github.com/fnichol/names/blob/main/CHANGELOG.md
names = "0.14.0"